# Email-Application-Tracker-API

./: .env  .gitignore  CLAUDE.md  LLM_filter.py  PLAN.md  README.md  api.py  config.py  email_client.py  main.py  pyproject.toml  quick_filter.py  requirements.txt  tracker.py
.cursor/rules/: github-phase-workflow.mdc
app/: config.py  main.py  worker.py
app/api/v1/: applications.py  emails.py  jobs.py  router.py
app/db/: database.py  models.py
app/db/repositories/: analysis_repo.py  application_repo.py  company_repo.py  email_repo.py  worker_run_repo.py
app/email_client/: client.py  quick_filter.py
app/llm/: base.py  errors.py  factory.py  groq_adapter.py  normalization.py  ollama_adapter.py
app/services/: email_service.py
email_tracker/: .env  main.py
email_tracker/DB/: database.py  models.py
tests/unit/: test_phase3_email_parser.py  test_phase4_llm_providers.py  test_phase5_api.py
