[project]
name = "email-application-tracker"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E712"]  # Allow `== True` in SQLAlchemy filter expressions

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
